fix long text in hidden placeholder to cause horizontal scrolling on mobile

--- a/assets/styles/src/utilities/_utilities.scss
+++ b/assets/styles/src/utilities/_utilities.scss
@@ -19,6 +19,7 @@
 
 .invisible-placeholder {
   visibility: hidden;
+  overflow: hidden;
 }
 
 // Typography utilities
